--- a/backend/package.json
+++ b/backend/package.json
@@ -8,17 +8,22 @@
     "dev": "nodemon server.js",
     "init-db": "node scripts/initDatabase.js"
   },
-  "keywords": ["hotel", "api", "mysql"],
+  "keywords": [
+    "hotel",
+    "api",
+    "mysql"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.5",
-    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.0.0",
+    "mysql2": "^3.6.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
