--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,7 @@
   },
   "keywords": [
     "hotel",
-    "api",
-    "mysql"
+    "api"
   ],
   "author": "",
   "license": "ISC",
@@ -22,8 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^9.0.0",
-    "mysql2": "^3.6.5"
+    "mongoose": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
